<resources>
    <string name="app_name">Ratinho SB</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="uepaButton">UEPAAAAAAA</string>
    <string name="ratinhoButton">RATINHOOOOO</string>
    <string name="comboButton">Combo</string>
    <string name="rapazButton">RAPAZZZZ</string>
    <string name="ihaButton">IIHAAA!</string>
    <string name="naoPaiButton">É o pai?</string>

    <string name="cavaloButton">CAVALO</string>
    <string name="uiButton">UUUUIIII</string>
    <string name="ablublubleButton">ABLUBLU</string>
    <string name="eleGostaButton">ELE GOSTA</string>
    <string name="dancaGatinho">DANÇA</string>
    <string name="pareButton">PARE!</string>

    <string name="title_activity_swipe_right">SwipeRight</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="parar_audio">Parar áudio</string>


</resources>