<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SwipeRight" android:id="@+id/coordinatorLayout">

    <Button
            android:text="@string/cavaloButton"
            android:layout_width="118dp"
            android:layout_height="48dp" android:id="@+id/cavaloButton"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="264dp" android:layout_marginStart="44dp"
            app:layout_constraintBottom_toTopOf="@+id/ablubluble" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/uiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/uiButton"
            app:layout_constraintStart_toEndOf="@+id/cavaloButton" android:layout_marginStart="112dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="264dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/ablublubleButton"
            android:layout_width="126dp"
            android:layout_height="49dp" android:id="@+id/ablubluble"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="312dp"/>
    <Button
            android:text="@string/eleGostaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/eleGostaButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp" android:layout_marginBottom="280dp"
            app:layout_constraintTop_toBottomOf="@+id/uiButton" app:layout_constraintVertical_bias="0.648"
            app:layout_constraintStart_toEndOf="@+id/ablubluble" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/pareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pareButton"
            app:layout_constraintTop_toBottomOf="@+id/eleGostaButton"
            android:layout_marginTop="36dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"/>
    <Button
            android:text="@string/dancaGatinho"
            android:layout_width="129dp"
            android:layout_height="47dp" android:id="@+id/dancaGatinho"
            app:layout_constraintTop_toBottomOf="@+id/ablubluble"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp"/>

    <!--<include layout="@layout/content_swipe_right"/> por isso ele vem e vai embora!-->


</androidx.constraintlayout.widget.ConstraintLayout>